--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 jupyter==1.0.0
+numpy==1.26.4
 pandas==2.2.2
 geopandas==0.14.4
-folium==0.17.0
-matplotlib==3.9.0
-seaborn==0.13.2
-numpy==1.26.4
-scipy==1.13.1
+folium
+matplotlib
+scipy
